plugins {
	id "java"
	id "com.github.johnrengelman.shadow"
}

repositories {
	mavenCentral()
	maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }

	//Downloads the dependencies JAR file from Mindustry releases; does not use any real repository. Surprisingly, this is the most reliable option.
	ivy {
		url = 'https://github.com/'
		patternLayout { artifact(
				(mindustryVersion == "latest" ? '/[organisation]/[module]/releases/[revision]/download/dependencies.jar' : //latest stable release
						mindustryVersion == "be" ? '/[organisation]/[module]/releases/download/master/[revision].jar' : //latest commit (BE)
								'/[organisation]/[module]/releases/download/[revision]/dependencies.jar')) //specific release
		}
		metadataSources { artifact() }

		content {
			if (mindustryVersion == "be") {
				//BE artifact version is always 'latest'
				includeVersion("Anuken", "MindustryBuilds", "latest")
			} else {
				includeVersion("Anuken", "Mindustry", mindustryVersion)
			}
		}
	}
}

java {
	targetCompatibility = JavaVersion.VERSION_17
	sourceCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"

	options.compilerArgs.addAll([
			"-Xlint:deprecation",
			"--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"
	])
}

dependencies {
	compileOnly mindustryVersion == "be" ? "Anuken:MindustryBuilds:latest" : "Anuken:Mindustry:$mindustryVersion"
	compileOnly "com.jakewharton.android.repackaged:dalvik-dx:9.0.0_r3"

	compileOnly project(":core")

	compileOnly files("libs/android-34.jar", "libs/mindustry-android.jar")

	implementation files("libs/android-field.jar")
}

jar {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}